fix itemlist overflow to not go outside card

--- a/app/assets/stylesheets/components/itemlist.scss
+++ b/app/assets/stylesheets/components/itemlist.scss
@@ -1,4 +1,5 @@
 .item-list {
+  overflow-x: hidden;
   .card {
     background: transparent;
     box-shadow: none !important;
